--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div class="container">
           <p class="label">Container</p>
           <a href="./index.html">Reset</a>
+          <img class="image" src="./img/img-mobile.jpg" alt="" />
+
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         </div>
       </section>
     </main>
